; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_exit_program.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_cmdutils.c_exit_program.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exit_program(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br i1 true, label %3, label %6

3:                                                ; preds = %1
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @program_exit(i32 %4)
  br label %6

6:                                                ; preds = %3, %1
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @exit(i32 %7) #3
  unreachable
}

declare dso_local i32 @program_exit(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
